fixed large page block categories spacing

--- a/assets/sass/blocks/pages.sass
+++ b/assets/sass/blocks/pages.sass
@@ -72,8 +72,9 @@
                     @include h3
                     a
                         text-decoration: none
+                .page-categories
+                    margin-bottom: $spacing-3
                 .more
-                    @include body-text
                     margin-top: auto
                     text-decoration: underline
                     text-underline-offset: 2px
@@ -98,3 +99,6 @@
                     width: columns(6)
                 .media
                     margin-bottom: 0
+            @include media-breakpoint-up(desktop)
+                .more
+                    @include body-text
